--- a/forms/covid-form.html
+++ b/forms/covid-form.html
@@ -90,7 +90,7 @@
 				<div class="inner">
 					<header class="align-center">
 						<p>Test and Trace</p>
-						<h2>COVID-19 POLICY</h2>
+						<h2>COVID-19 Policy</h2>
 					</header>
 				</div>
 			</section>
@@ -100,11 +100,11 @@
 				<div class="inner">
 					<div class="box">
 						<div class="content">
-							<header class="align-center">
-								<p>Please Come Back Later</p>
-								<h2>Under Construction</h2>
-							</header>
-						</div>
+							<p>In order to support the NHS Test and Trace programme, we are taking contact details for all visitors, as well as recording times entering and leaving NU Base.
+							</br>In line with guidance issued by the Department for Health and Social Care, we will keep your details safely and in compliance with GDPR legislation for 21 days before securely disposing of or deleting them. We will only share your details with NHS Test and Trace, if asked, in the event that it is needed to help stop the spread of coronavirus. We will not use your details for any other purposes or pass them on to anyone else.</p>
+							<p>Thank you for your understanding.</p>
+							<p>If you agree to providing your information for this reason, please complete the following form:</p>
+						</div>           
 					</div>
 				</div>
 			</section>
