Added pages for forms

--- a/forms/covid-form.html
+++ b/forms/covid-form.html
@@ -6,8 +6,8 @@
 		<meta charset="utf-8" />
 		<meta name="robots" content="noindex, nofollow, nosnippet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+		<link rel="stylesheet" href="../assets/css/main.css" />
 	</head>
 	<body class="subpage">
 
@@ -16,44 +16,44 @@
 			<div class="nav-container">
 			  <div class="brand">
 				<a href="/">
-				  <img alt="YAFA Logo" src="images/favicon.png">
+				  <img alt="YAFA Logo" src="../images/favicon.png">
 				</a>
 			  </div>
 		  
 			  <nav>
-			  <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+			  <div class="nav-mobile"><a id="nav-toggle" href="/#!"><span></span></a></div>
 			  <ul class="nav-list">
 				<li>
 				<a href="/">HOME</a>
 				</li>
 				<li>
-				<a href="about">ABOUT</a>
+				<a href="../about">ABOUT</a>
 				</li>
 				<li>
-				<a href="#!">WHAT WE DO</a>
+				<a href="../#!">WHAT WE DO</a>
 				<ul class="nav-dropdown">
 				  <li>
-				  <a href="what-we-do">COMMUNITY DEVELOPMENT</a>
+				  <a href="../what-we-do">COMMUNITY DEVELOPMENT</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">EDUCATION AND TRAINING</a>
+				  <a href="../what-we-do">EDUCATION AND TRAINING</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">YOUTH ACTIVITIES</a>
+				  <a href="../what-we-do">YOUTH ACTIVITIES</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">ARTS, CULTURE AND HERITAGE</a>
+				  <a href="../what-we-do">ARTS, CULTURE AND HERITAGE</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">SPORTS</a>
+				  <a href="../what-we-do">SPORTS</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">FACILITIES AND SERVICES</a>
+				  <a href="../what-we-do">FACILITIES AND SERVICES</a>
 				  </li>
 				</ul>
 				</li>
 				<li>
-				<a href="timetable">TIMETABLE</a>
+				<a href="../timetable">TIMETABLE</a>
 				</li>
 				<li>
 				<a href="#!">BOOK</a>
@@ -70,13 +70,13 @@
 				</ul>
 				</li>
 				<li>
-				<a href="donate">NEWS</a>
+				<a href="../donate">NEWS</a>
 				</li>
 				<li>
-				<a href="contact">CONTACT</a>
+				<a href="../contact">CONTACT</a>
 				</li>
 				<li>
-				  <a href="donate" class="button special">DONATE</a>
+				  <a href="../donate" class="button special">DONATE</a>
 				</li>
 			  </ul>
 		  
@@ -125,11 +125,11 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/skel.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
